exhibition page improved

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -131,11 +131,13 @@
         <div class="content-container">
           <h1 class="main-heading">Exhibitions</h1>
           <section class="section-container">
-            <div id="cosmology-anchor"></div>
-            <div class="card-wrapper" id="card-wrapper-cosmology">
+            <div class="card-wrapper">
+
+              <!-- <div id="cosmology-anchor"></div> -->
               <div class="card">
-                <h2 id="cosmology">COSMOLOGY</h2>
-                <div class="cosmology background">
+                <div class="card-image"><img src="images\cosmology_large.jpg" /></div>
+                <h2 id="cosmology" class="card-heading">Cosmology</h2>
+                <div class="card-body cosmology">
                   <p>
                     Explore the wonders of our cosmos. Our fantastic exhibition,
                     ‘The Sky Above Us’, explores the night sky and what we can see
@@ -151,36 +153,12 @@
                   </p>
                 </div>
               </div>
-              <figure class="arrow-down">
-                <!-- <img
-                src="images\icons\arrow-circle-down-purple.png"
-                alt=""
-                class="arrow-down"
-              /> -->
-                <i class="purple fas fa-arrow-circle-down"></i>
-              </figure>
-              <figure class="purple arrow-left-right">
-                <!-- <img
-                src="images\icons\arrow-circle-right-purple.png"
-                alt=""
-                class="arrow-left-right"
-              /> -->
-                <i class="fas fa-arrow-circle-right"></i>
-              </figure>
-              <figure class="card">
-                <img src="images\cosmology.jpg"
-                  alt="Full size exhbit of the moonlanding with an astronaut standing in front of the Lunar Module" />
-              </figure>
-              <figure class="card-large" id="astronaut">
-                <img src="images\cosmology_large.jpg"
-                  alt="Full size exhbit of the moonlanding with an astronaut standing in front of the Lunar Module" />
-              </figure>
-            </div>
-            <div id="evolution-anchor"></div>
-            <div class="card-wrapper">
-              <div class="card reverse">
-                <h2 id="evolution">EVOLUTION</h2>
-                <div class="evolution background">
+
+              <!-- <div id="evolution-anchor"></div> -->
+              <div class="card">
+                <div class="card-image"><img src="images/evolution_large.jpg" /></div>
+                <h2 id="evolution" class="card-heading">Evolution</h2>
+                <div class="card-body evolution">
                   <p>
                     For centuries, philosophers and scientists have wrestled with
                     the question of our origins. Where do we come from and how did
@@ -196,34 +174,12 @@
                   </p>
                 </div>
               </div>
-              <figure class="arrow-down">
-                <!-- <img
-                src="images\icons\arrow-circle-down-blue.png"
-                alt=""
-                class="arrow-down"
-              /> -->
-                <i class="blue fas fa-arrow-circle-down"></i>
-              </figure>
-              <figure class="blue arrow-left-right reverse-arrow">
-                <!-- <img
-                src="images\icons\arrow-circle-left-blue.png"
-                alt=""
-                class="arrow-left-right"
-              /> -->
-                <i class="fas fa-arrow-circle-left"></i>
-              </figure>
-              <figure class="card">
-                <img src="images\evolution.jpg" alt="Exhibit of a full mammuth sceleton" />
-              </figure>
-              <figure class="card-large reverse">
-                <img src="images\evolution_large.jpg" alt="Exhibit of a full mammuth sceleton" />
-              </figure>
-            </div>
-            <div id="biology-anchor"></div>
-            <div class="card-wrapper">
+
+              <!-- <div id="biology-anchor"></div> -->
               <div class="card">
-                <h2 id="biology">BIOLOGY & MEDICINE</h2>
-                <div class="biology background">
+                <div class="card-image"><img src="images/biology_large.jpg" /></div>
+                <h2 id="biology" class="card-heading">Biology & medicine</h2>
+                <div class="card-body biology">
                   <p>
                     From micro-organisms to the human body, major breakthroughs in
                     biology are offering us unique insights into the great wonders
@@ -239,34 +195,13 @@
                   </p>
                 </div>
               </div>
-              <figure class="arrow-down">
-                <!-- <img
-                src="images\icons\arrow-circle-down-dark_green.png"
-                alt=""
-                class="arrow-down"
-              /> -->
-                <i class="dark-green fas fa-arrow-circle-down"></i>
-              </figure>
-              <figure class="arrow-left-right">
-                <!-- <img
-                src="images\icons\arrow-circle-right-dark_green.png"
-                alt=""
-                class="arrow-left-right"
-              /> -->
-                <i class="dark-green fas fa-arrow-circle-right"></i>
-              </figure>
-              <figure class="card">
-                <img src="images\biology.jpg" alt="A young girl is studing a sample with a microscope" />
-              </figure>
-              <figure class="card-large">
-                <img src="images\biology_large.jpg" alt="A young girl is studing a sample with a microscope" />
-              </figure>
-            </div>
-            <div id="robotics-anchor"></div>
-            <div class="card-wrapper">
-              <div class="card reverse">
-                <h2 id="robotics">ROBOTICS & AI</h2>
-                <div class="robotics background">
+
+              <!-- <div id="robotics-anchor"></div> -->
+
+              <div class="card">
+                <div class="card-image"><img src="images/robotics_large.jpg" /></div>
+                <h2 id="robotics" class="card-heading">Robotics & AI</h2>   
+                <div class="card-body robotics">
                   <p>
                     The information revolution is here and robotics and artificial
                     intelligence are the science of the future.
@@ -282,36 +217,13 @@
                   </p>
                 </div>
               </div>
-              <figure class="arrow-down">
-                <!-- <img
-                src="images\icons\arrow-circle-down-orange.png"
-                alt="arrow pointing downwards"
-                class="arrow-down"
-              /> -->
-                <i class="orange fas fa-arrow-circle-down"></i>
-              </figure>
-              <figure class="orange arrow-left-right reverse-arrow">
-                <!-- <img
-                src="images\icons\arrow-circle-left-orange.png"
-                alt="arrow pointing left"
-                class="arrow-left-right"
-              /> -->
-                <i class="fas fa-arrow-circle-left"></i>
-              </figure>
-              <figure class="card">
-                <img src="images\robotics.jpg"
-                  alt="Image of Rob the Robot, who is looking into the camera with his right arm raised." />
-              </figure>
-              <figure class="card-large reverse">
-                <img src="images\robotics_large.jpg"
-                  alt="Image of Rob the Robot, who is looking into the camera with his right arm raised." />
-              </figure>
-            </div>
-            <div id="ecology-anchor"></div>
-            <div class="card-wrapper">
+
+
+              <!-- <div id="ecology-anchor"></div> -->
               <div class="card">
-                <h2 id="ecology">ECOLOGY</h2>
-                <div class="ecology background">
+                <div class="card-image"><img src="images/ecology_large.jpg" /></div>
+                <h2 id="ecology" class="card-heading">ECOLOGY</h2>
+                <div class="card-body ecology">
                   <p>
                     As we learn more and more of the impact humans are having on
                     the planet, the more important it becomes that scientists
@@ -326,87 +238,86 @@
                   </p>
                 </div>
               </div>
-              <figure class="arrow-down">
-                <!-- <img
-                src="images\icons\arrow-circle-down-magenta.png"
-                alt="arrow pointing down"
-                class="arrow-down"
-              /> -->
-                <i class="magenta fas fa-arrow-circle-down"></i>
-              </figure>
-              <figure class="arrow-left-right">
-                <!-- <img
-                src="images\icons\arrow-circle-right-magenta.png"
-                alt="arrow pointing right"
-                class="arrow-left-right"
-              /> -->
-                <i class="magenta fas fa-arrow-circle-right"></i>
-              </figure>
-              <figure class="card">
-                <img src="images\ecology.jpg"
-                  alt="Exhibit of an interactive model of the planet Earths weather system" />
-              </figure>
-              <figure class="card-large">
-                <img src="images\ecology_large.jpg"
-                  alt="Exhibit of an interactive model of the planet Earths weather system" />
-              </figure>
-            </div>
-          </section>
-          <section class="photo-gallery">
-            <h3 class="main-heading">Come Visit Us and Continue Your Exploration</h3>
-            <div class="image-wrapper">
-              <figure>
-                <img src="../images/gallery-1.jpg"
-                  alt="A teenage boy with virtual reality headset is holding a paintbrush" />
-              </figure>
-              <figure>
-                <img src="../images/gallery-2.jpg" alt="A model of a human body with the inner organs exposed" />
-              </figure>
-              <figure>
-                <img src="../images/gallery-3.jpg"
-                  alt="Excited schoolgirl with safetyglasses is soldering on a small part for a machine model" />
-              </figure>
-              <figure>
-                <img src="../images/gallery-4.jpg" alt="Model of a human hearth" />
-              </figure>
-              <figure>
-                <img src="../images/gallery-5.jpg"
-                  alt="a woman in lab equipment is operating a huge sylinder shaped machine" />
-              </figure>
-              <figure>
-                <img src="../images/gallery-6.jpg" alt="a kid with virtual reality headset" />
-              </figure>
-            </div>
-            <p class="visit">"More Than 1000 Unique Exhibits to Explore"</p>
-          </section>
-        </div>
-        <div class="newsletter-wrapper">
-          <div class="blur">
-            <section class="newsletter-section">
-              <p for="newsletter">
-                Sign up to our <em>newsletter</em> and be the first to know about our
-                exciting <em>new stuff</em>:
-              </p>
-              <div class="newsletter-success">
-                Welcome! Please check your inbox
-              </div>
-              <form class="newsletter-form">
-                <label for="newsletter-input">E-mail</label>
-                <div class="input-wrapper">
-                  <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
-                  <button id="sign-up-button" type="submit" name="subscribe" value="SIGN UP">Sign up</button>
+
+              <!-- <div id="ecology-anchor"></div> -->
+              <div class="card">
+                <div class="card-image"><img src="images/evolution_large.jpg" /></div>
+                <h2 id="special-events" class="card-heading">Special events</h2>
+                <div class="card-body ecology">
+                  <p>
+                    As we learn more and more of the impact humans are having on
+                    the planet, the more important it becomes that scientists
+                    explore how to create a sustainable future not just for humans
+                    but for the whole planet.
+                  </p>
+                  <p>
+                    From January 4th 2021 we will have the Energetica exhibition
+                    on loan from the NEMO Science Museum in Amsterdam. This is a
+                    series of installations that allow visitors to experience the
+                    power of the elements as we harness them.
+                  </p>
                 </div>
-              </form>
-              <p id="newsletter-error" class="error-message">
-                Please enter a valid e-mail address
-              </p>
-            </section>
+              </div>
+            </div>
+
+        </div>
+
+        </section>
+        <section class="photo-gallery">
+          <h3 class="main-heading">Come Visit Us and Continue Your Exploration</h3>
+          <div class="image-wrapper">
+            <figure>
+              <img src="../images/gallery-1.jpg"
+                alt="A teenage boy with virtual reality headset is holding a paintbrush" />
+            </figure>
+            <figure>
+              <img src="../images/gallery-2.jpg" alt="A model of a human body with the inner organs exposed" />
+            </figure>
+            <figure>
+              <img src="../images/gallery-3.jpg"
+                alt="Excited schoolgirl with safetyglasses is soldering on a small part for a machine model" />
+            </figure>
+            <figure>
+              <img src="../images/gallery-4.jpg" alt="Model of a human hearth" />
+            </figure>
+            <figure>
+              <img src="../images/gallery-5.jpg"
+                alt="a woman in lab equipment is operating a huge sylinder shaped machine" />
+            </figure>
+            <figure>
+              <img src="../images/gallery-6.jpg" alt="a kid with virtual reality headset" />
+            </figure>
           </div>
+          <p class="visit">"More Than 1000 Unique Exhibits to Explore"</p>
+        </section>
+      </div>
+      <div class="newsletter-wrapper">
+        <div class="blur">
+          <section class="newsletter-section">
+            <p for="newsletter">
+              Sign up to our <em>newsletter</em> and be the first to know about our
+              exciting <em>new stuff</em>:
+            </p>
+            <div class="newsletter-success">
+              Welcome! Please check your inbox
+            </div>
+            <form class="newsletter-form">
+              <label for="newsletter-input">E-mail</label>
+              <div class="input-wrapper">
+                <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
+                <button id="sign-up-button" type="submit" name="subscribe" value="SIGN UP">Sign up</button>
+              </div>
+            </form>
+            <p id="newsletter-error" class="error-message">
+              Please enter a valid e-mail address
+            </p>
+          </section>
         </div>
       </div>
-      <div class="fading-background_1"></div>
-      <div class="fading-background_2"></div>
-    </main>
+  </div>
+  <div class="fading-background_1"></div>
+  <div class="fading-background_2"></div>
+  </main>
   </div>
   <footer>
     <div class="footer-wrapper">
