--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
               </p>
             </div>
           </div>
-
           <div class="dropdown-wrapper">
             <i class="fa fa-ticket-alt nav-icon"></i>
             <div class="ticket-dropdown">
@@ -127,7 +126,6 @@
         </ul>
       </nav>
     </header>
-
     <main>
       <div class="hero-container">
         <div class="hero-content">
@@ -157,8 +155,8 @@
 
             <a href="exhibitions.html#cosmology-anchor">
               <div class="category-box-content">
-                <figure id="planet" class="category-icon">
-                  <img src="images/icons/planet_white.png" alt="icon of a planet" />
+                <figure class="category-planet-icon">
+                  <img src="images/icons/planet_white.png" alt="icon of a planet" class="category-planet-icon" />
                 </figure>
                 <figcaption class="category-caption">COSMOLOGY</figcaption>
               </div>
@@ -168,7 +166,7 @@
           <div class="category-box" id="evolution">
             <a href="exhibitions.html#evolution-anchor">
               <div class="category-box-content">
-                <figure class="category-icon"><span class="fa fa-dna"></span></figure>
+                <figure><span class="fa fa-dna category-icon"></span></figure>
                 <figcaption class="category-caption">EVOLUTION</figcaption>
               </div>
             </a>
@@ -177,7 +175,7 @@
           <div class="category-box" id="biology">
             <a href="exhibitions.html#biology-anchor">
               <div class="category-box-content">
-                <figure class="category-icon"><span class="fa fa-microscope"></span></figure>
+                <figure><span class="fa fa-microscope category-icon"></span></figure>
                 <figcaption class="category-caption">BIOLOGY & MEDICINE</figcaption>
               </div>
             </a>
@@ -185,7 +183,7 @@
           <div class="category-box" id="robotics">
             <a href="exhibitions.html#robotics-anchor">
               <div class="category-box-content">
-                <figure class="category-icon"><span class="fa fa-robot"></span></figure>
+                <figure><span class="fa fa-robot category-icon"></span></figure>
                 <figcaption class="category-caption">ROBOTICS & AI</figcaption>
               </div>
             </a>
@@ -193,7 +191,7 @@
           <div class="category-box" id="ecology">
             <a href="exhibitions.html#ecology-anchor">
               <div class="category-box-content">
-                <figure class="category-icon"><span class="fa fa-globe-americas"></span></figure>
+                <figure><span class="fa fa-globe-americas category-icon"></span></figure>
                 <figcaption class="category-caption">ECOLOGY</figcaption>
               </div>
             </a>
@@ -201,7 +199,7 @@
           <div class="category-box" id="events">
             <a href="#news-anchor">
               <div class="category-box-content">
-                <figure class="category-icon"><span class="fa fa-rocket"></span></figure>
+                <figure><span class="fa fa-rocket category-icon"></span></figure>
                 <figcaption class="category-caption">SPECIAL EVENTS</figcaption>
               </div>
             </a>
@@ -210,7 +208,7 @@
         <section class="info-section">
           <div class="clock">
             <span class="fa fa-clock"></span>
-            <p>OPEN TODAY UNTIL 16:00</p>
+            <p>OPEN TODAY FROM 10:00 — 16:00</p>
           </div>
           <div class="ticketmaster">
             <p id="tour">Guided Tour 70 NOK per Person</p>
