gallery section improved

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -200,7 +200,7 @@
 
               <div class="card">
                 <div class="card-image"><img src="images/robotics_large.jpg" /></div>
-                <h2 id="robotics" class="card-heading">Robotics & AI</h2>   
+                <h2 id="robotics" class="card-heading">Robotics & AI</h2>
                 <div class="card-body robotics">
                   <p>
                     The information revolution is here and robotics and artificial
@@ -259,38 +259,37 @@
                 </div>
               </div>
             </div>
-
+          </section>
+          <section class="gallery-section">
+            <h3 class="main-heading">Come Visit Us and Continue Your Exploration</h3>
+            <div class="gallery-wrapper">
+              <figure>
+                <img src="../images/gallery-1.jpg"
+                  alt="A teenage boy with virtual reality headset is holding a paintbrush" />
+              </figure>
+              <figure>
+                <img src="../images/gallery-2.jpg" alt="A model of a human body with the inner organs exposed" />
+              </figure>
+              <figure>
+                <img src="../images/gallery-3.jpg"
+                  alt="Excited schoolgirl with safetyglasses is soldering on a small part for a machine model" />
+              </figure>
+              <figure>
+                <img src="../images/gallery-4.jpg" alt="Model of a human hearth" />
+              </figure>
+              <figure>
+                <img src="../images/gallery-5.jpg"
+                  alt="a woman in lab equipment is operating a huge sylinder shaped machine" />
+              </figure>
+              <figure>
+                <img src="../images/gallery-6.jpg" alt="a kid with virtual reality headset" />
+              </figure>
+            </div>
+            <p class="gallery-quote">"More Than 1000 Unique Exhibits to Explore"</p>
+          </section>
         </div>
-
-        </section>
-        <section class="photo-gallery">
-          <h3 class="main-heading">Come Visit Us and Continue Your Exploration</h3>
-          <div class="image-wrapper">
-            <figure>
-              <img src="../images/gallery-1.jpg"
-                alt="A teenage boy with virtual reality headset is holding a paintbrush" />
-            </figure>
-            <figure>
-              <img src="../images/gallery-2.jpg" alt="A model of a human body with the inner organs exposed" />
-            </figure>
-            <figure>
-              <img src="../images/gallery-3.jpg"
-                alt="Excited schoolgirl with safetyglasses is soldering on a small part for a machine model" />
-            </figure>
-            <figure>
-              <img src="../images/gallery-4.jpg" alt="Model of a human hearth" />
-            </figure>
-            <figure>
-              <img src="../images/gallery-5.jpg"
-                alt="a woman in lab equipment is operating a huge sylinder shaped machine" />
-            </figure>
-            <figure>
-              <img src="../images/gallery-6.jpg" alt="a kid with virtual reality headset" />
-            </figure>
-          </div>
-          <p class="visit">"More Than 1000 Unique Exhibits to Explore"</p>
-        </section>
       </div>
+
       <div class="newsletter-wrapper">
         <div class="blur">
           <section class="newsletter-section">
