--- a/explore.html
+++ b/explore.html
@@ -248,26 +248,26 @@
   <footer>
     <div class="footer-wrapper">
       <div class="footer-container fi1">
-        <h6>CONNECT:</h6>
-        <ul class="connect">
+        <h6 class="footer-heading">CONNECT:</h6>
+        <ul class="footer-icon-list">
           <li>
-            <a href="https://www.facebook.com/"><span class="fa fa-facebook-f"></span></a>
+            <a href="https://www.facebook.com/"><span class="fa fa-facebook-f footer-icon"></span></a>
           </li>
           <li>
-            <a href="https://www.instagram.com/"><span class="fa fa-instagram"></span></a>
+            <a href="https://www.instagram.com/"><span class="fa fa-instagram footer-icon"></span></a>
           </li>
           <li>
-            <a href="https://www.youtube.com"><span class="fa fa-youtube"></span></a>
+            <a href="https://www.youtube.com"><span class="fa fa-youtube footer-icon"></span></a>
           </li>
           <li>
-            <a href="https://www.twitter.com"><span class="fa fa-twitter"></span></a>
+            <a href="https://www.twitter.com"><span class="fa fa-twitter footer-icon"></span></a>
           </li>
         </ul>
       </div>
-      <div class="footer-container fi2">
-        <h6>HOURS:</h6>
-        <div class="hours-wrapper">
-          <ul class="hours">
+      <div class="footer-container">
+        <h6 class="footer-heading">HOURS:</h6>
+        <div class="footer-hours-wrapper">
+          <ul class="footer-list">
             <li>Monday:</li>
             <li>Tuesday:</li>
             <li>Wednesday:</li>
@@ -276,7 +276,7 @@
             <li>Saturday:</li>
             <li>Sunday:</li>
           </ul>
-          <ul>
+          <ul class="footer-list">
             <li>Closed</li>
             <li>10:00 - 16:00</li>
             <li>10:00 - 16:00</li>
@@ -287,32 +287,34 @@
           </ul>
         </div>
       </div>
-      <div class="footer-container fi3">
+      <div class="footer-container">
         <div>
-          <h6>LOCATION:</h6>
+          <h6 class="footer-heading">LOCATION:</h6>
           <p>Nygårdsgaten 112</p>
           <p>5008 Bergen, Norway</p>
         </div>
-        <a href="visit.html#map" class="location"><span class="fa fa-map-marker-alt"></span>
-          <p>Getting Here</p>
+        <a href="visit.html#map" class="footer-location-wrapper"><span class="fa fa-map-marker-alt footer-icon"></span>
+          <span id="location-link">Getting Here</span>
         </a>
       </div>
-      <div class="footer-container fi4">
-        <h6>CONTACT & SUPPORT:</h6>
-        <ul class="contact">
+      <div class="footer-container">
+        <h6 class="footer-heading">CONTACT & SUPPORT:</h6>
+        <ul class="footer-list">
           <li><a href="about_us.html">About Us</a></li>
           <li><a href="visit.html#facilities">Facilities</a></li>
           <li><a href="contact.html">Contact & FAQ</a></li>
           <li>
-            <p>Email: contact@cms.com</p>
+            <a>Email: contact@cms.com</a>
           </li>
           <li>
-            <p>Phone: 500 55 555</p>
+            <a>Phone: 500 55 555</a>
           </li>
         </ul>
       </div>
     </div>
-    <p id="copyright">Community Science Museum 2020</p>
+    <div class="copyright-container">
+      <span id="copyright">Community Science Museum 2020</span>
+    </div>
   </footer>
   <script src="js/in_common.js"></script>
 </body>
