tour guide section improved

--- a/about_us.html
+++ b/about_us.html
@@ -129,7 +129,7 @@
       <div class="main-wrapper">
         <div class="content-container">
           <h1 class="main-heading">About us</h1>
-          <section class="section-container vision">
+          <section class="section-container vision-section">
             <div class="info-box item-1">
               <h5 class="info-box-heading">Let us explore together</h5>
               <p>
@@ -181,45 +181,45 @@
               Get in touch
             </a>
           </div>
-          <section class="section-container">
+          <section class="gallery-section">
             <h4 class="main-heading">Meet our passionate tour guides</h4>
-            <div class="image-wrapper">
-              <div class="tourguide">
+            <div class="gallery-wrapper">
+              <figure class="tourguide">
                 <img src="images\charles.png"
                   alt="A white man in his late twenties with brown hair and a subtile smile in his short beard" />
                 <figcaption>CHARLES</figcaption>
-              </div>
-              <div class="tourguide">
+              </figure>
+              <figure class="tourguide">
                 <img src="images\marie.png" alt="A young woman with pale skin, blue eyes, curly hair and a big smile" />
                 <figcaption>MARIE</figcaption>
-              </div>
-              <div class="tourguide">
+              </figure>
+              <figure class="tourguide">
                 <img src="images\rosalind.png"
                   alt="A young woman with shoulder long dark hair sitting and looking up into the camera, smiling" />
                 <figcaption>ROSALIND</figcaption>
-              </div>
-              <div class="tourguide">
+              </figure>
+              <figure class="tourguide">
                 <img src="images\alexander.png"
                   alt="A young man of asian heritage with dark hair and eyes are smiling into the camera" />
                 <figcaption>ALEXANDER</figcaption>
-              </div>
-              <div class="tourguide">
+              </figure>
+              <figure class="tourguide">
                 <img src="images\isaac.png"
                   alt="A white man in his early thirties with half long hair and who is sporting a red cap and a smile" />
                 <figcaption>ISAAC</figcaption>
-              </div>
-              <div class="tourguide">
+              </figure>
+              <figure class="tourguide">
                 <img src="images\albert.png"
                   alt="A black man about 30 years old with short hair, glasses and a happy smiling look" />
                 <figcaption>ALBERT</figcaption>
-              </div>
-              <div class="tourguide">
+              </figure>
+              <!-- <div class="tourguide">
                 <img src="images\rhonda.png"
                   alt="A woman in her mid twenties with long brown hair and a big white smile." />
                 <figcaption>RHONDA</figcaption>
-              </div>
+              </div> -->
             </div>
-            <p class="tourguide-quote">"We Hope to See You Soon"</p>
+            <p class="gallery-quote">"We Hope to See You Soon"</p>
           </section>
         </div>
         <div class="newsletter-wrapper">
