--- a/exhibitions.html
+++ b/exhibitions.html
@@ -261,7 +261,7 @@
             </div>
           </section>
           <section class="gallery-section">
-            <h3 class="main-heading">Come Visit Us and Continue Your Exploration</h3>
+            <h3 class="main-heading">Come visit us and continue your exploration</h3>
             <div class="gallery-wrapper">
               <figure>
                 <img src="../images/gallery-1.jpg"
@@ -285,7 +285,7 @@
                 <img src="../images/gallery-6.jpg" alt="a kid with virtual reality headset" />
               </figure>
             </div>
-            <p class="gallery-quote">"More Than 1000 Unique Exhibits to Explore"</p>
+            <p class="gallery-quote">"More than 1000 unique exhibits to explore"</p>
           </section>
         </div>
 
