--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <figure class="logo">
           <a href="index.html"><img src="images/cms-logo.png" alt="Community Science Museum logo" /></a>
         </figure>
-        <nav aria-label="icons" class="nav-icons-wrapper">
-          <div class="dropdown-wrapper">
+        <!-- <div class="dropdown-wrapper">
             <i class="fa fa-search nav-icon"></i>
             <div class="search-dropdown">
               <p class="search-header">search results</p>
@@ -39,91 +38,96 @@
                 Sorry, no result for your search, please try something else
               </p>
             </div>
-          </div>
-          <div class="dropdown-wrapper">
-            <i class="fa fa-ticket-alt nav-icon"></i>
-            <div class="ticket-dropdown">
-              <p class="ticket-header">buy ticket</p>
-              <p class="dropdown-text">
-                Please Choose the Desired Number of Tickets and Click Proceed in
-                order to finalize your purchase on www.ticketmaster.com
-              </p>
-              <p class="dropdown-text">
-                If your party consist of 6 people or more, you will be taken to
-                our contact form.
-              </p>
-              <form action="" class="ticket dropdown-form">
-                <label for="select" class="ticket-label">Tickets</label>
-                <select name="tickets" id="select">
-                  <option class="option" value="1">1</option>
-                  <option class="option" value="1">2</option>
-                  <option class="option" value="1">3</option>
-                  <option class="option" value="1">4</option>
-                  <option class="option" value="1">5</option>
-                  <option class="option" value="more">6 or more</option>
-                </select>
-              </form>
-              <button class="ticket">PROCEED</button>
-            </div>
-          </div>
-
-          <div class="dropdown-wrapper">
-            <i class="fa fa-user-circle nav-icon"></i>
-            <div class="profile-dropdown">
-              <p class="profile-header">your account</p>
-              <form class="dropdown-form" id="profile-form">
-                <label for="email" class="label">E-mail</label>
-                <input type="text" name="email" placeholder="your@email.com" id="dropdown-email" class="box" />
-                <div class="error-message" id="profile-email-error">
-                  Please enter a valid e-mail address
-                </div>
-
-                <label for="choose" class="label_2">Password</label>
-                <input type="password" name="choose" placeholder="Password" class="box password"
-                  id="dropdown-password" />
-                <div class="error-message" id="profile-password-error">
-                  Must be at least 5 characters
-                </div>
-                <div id="success-message">
-                  Welcome back, you are now logged in
-                </div>
-                <button type="submit" id="profile-submit-button" class="profile">
-                  SIGN IN
-                </button>
-              </form>
-            </div>
-          </div>
-        </nav>
+          </div> -->
       </div>
-      <nav aria-label="menu" class="menu">
-        <ul class="mobile-menu">
-          <label class="hamburger-label" for="hamburger-menu"><span class="fa fa-bars"></span>
-            <span id="menu" class="menu-link">Menu</span>
-          </label>
-          <input type="checkbox" id="hamburger-menu" />
-          <li><a href="exhibitions.html">Exhibitions</a></li>
-          <li><a href="explore.html">Explore</a></li>
-          <li><a href="get_involved.html">Get involved</a></li>
-          <li><a href="visit.html">Visit</a></li>
-          <li><a href="about_us.html">About us</a></li>
-        </ul>
-        <ul class="large-screen-menu">
-          <li>
-            <a href="exhibitions.html" class="menu-link">Exhibitions</a>
-          </li>
-          <li>
-            <a href="explore.html" class="menu-link">Explore</a>
-          </li>
-          <li>
-            <a href="get_involved.html" class="menu-link">Get involved</a>
-          </li>
-          <li>
-            <a href="visit.html" class="menu-link">Visit</a>
-          </li>
-          <li>
-            <a href="about_us.html" class="menu-link">About us</a>
-          </li>
-        </ul>
+      <nav aria-label="menu" class="navbar">
+        <div class="navbar-menu">
+          <ul class="mobile-menu-list">
+            <label class="hamburger-label" for="hamburger-menu"><span class="fa fa-bars menu-icon"></span>
+              <span id="menu" class="menu-link ">Menu</span>
+            </label>
+            <input type="checkbox" id="hamburger-menu" />
+            <li><a href="exhibitions.html">Exhibitions</a></li>
+            <li><a href="explore.html">Explore</a></li>
+            <li><a href="get_involved.html">Get involved</a></li>
+            <li><a href="visit.html">Visit</a></li>
+            <li><a href="about_us.html">About us</a></li>
+          </ul>
+
+          <ul class="navbar-menu-list">
+            <li>
+              <a href="exhibitions.html" class="menu-link">Exhibitions</a>
+            </li>
+            <li>
+              <a href="explore.html" class="menu-link">Explore</a>
+            </li>
+            <li>
+              <a href="get_involved.html" class="menu-link">Get involved</a>
+            </li>
+            <li>
+              <a href="visit.html" class="menu-link">Visit</a>
+            </li>
+            <li>
+              <a href="about_us.html" class="menu-link">About us</a>
+            </li>
+          </ul>
+          <div class="navbar-icon-wrapper">
+
+            <div class="dropdown-wrapper">
+              <i class="fa fa-ticket-alt navbar-icon"></i>
+              <div class="ticket-dropdown">
+                <p class="ticket-header">buy ticket</p>
+                <p class="dropdown-text">
+                  Please Choose the Desired Number of Tickets and Click Proceed in
+                  order to finalize your purchase on www.ticketmaster.com
+                </p>
+                <p class="dropdown-text">
+                  If your party consist of 6 people or more, you will be taken to
+                  our contact form.
+                </p>
+                <form action="" class="ticket dropdown-form">
+                  <label for="select" class="ticket-label">Tickets</label>
+                  <select name="tickets" id="select">
+                    <option class="option" value="1">1</option>
+                    <option class="option" value="1">2</option>
+                    <option class="option" value="1">3</option>
+                    <option class="option" value="1">4</option>
+                    <option class="option" value="1">5</option>
+                    <option class="option" value="more">6 or more</option>
+                  </select>
+                </form>
+                <button class="ticket">PROCEED</button>
+              </div>
+            </div>
+
+            <div class="dropdown-wrapper">
+              <i class="fa fa-user-circle navbar-icon"></i>
+              <div class="profile-dropdown">
+                <p class="profile-header">your account</p>
+                <form class="dropdown-form" id="profile-form">
+                  <label for="email" class="label">E-mail</label>
+                  <input type="text" name="email" placeholder="your@email.com" id="dropdown-email" class="box" />
+                  <div class="error-message" id="profile-email-error">
+                    Please enter a valid e-mail address
+                  </div>
+
+                  <label for="choose" class="label_2">Password</label>
+                  <input type="password" name="choose" placeholder="Password" class="box password"
+                    id="dropdown-password" />
+                  <div class="error-message" id="profile-password-error">
+                    Must be at least 5 characters
+                  </div>
+                  <div id="success-message">
+                    Welcome back, you are now logged in
+                  </div>
+                  <button type="submit" id="profile-submit-button" class="profile">
+                    SIGN IN
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
       </nav>
     </header>
     <main>
@@ -141,7 +145,8 @@
         <a href="about_us.html">
           <div class="speech-bubble">
             <div class="speech-bubble-arrow"></div>
-            <h3 class="speech-bubble-caption">Let us explore together</h3>
+            <h3 class="speech-bubble-caption">Hi, my name is Pepper</h3>
+            <!-- <h3 class="speech-bubble-caption">Let us explore together</h3> -->
             <p>Learn more <em>about us</em> and our <em>vision</em></p>
             <span class="fa fa-arrow-circle-right"></span>
           </div>
@@ -208,10 +213,10 @@
         <section class="info-section">
           <div class="clock">
             <span class="fa fa-clock"></span>
-            <p>OPEN TODAY FROM 10:00 — 16:00</p>
+            <p>OPEN TODAY: 10:00 — 16:00</p>
           </div>
           <div class="ticketmaster">
-            <p id="tour">Guided Tour 70 NOK per Person</p>
+            <p id="tour">Guided Tour 250 NOK per Person</p>
             <p id="tickets">Online Tickets Provided by:</p>
             <figure id="ticketmaster-logo">
               <img src="images\icons\Ticketmaster-Logo-White.svg" alt="Ticketmaster logo" />
@@ -224,7 +229,7 @@
         <div class="content-container">
           <section class="news-section">
             <div id="news-anchor"></div>
-            <h4 id="special-event" class="main-heading">NEWS: Special Events & Exhibitions</h4>
+            <h2 id="special-event" class="main-heading">NEWS: Special Events & Exhibitions</h2>
 
             <div class="container">
               <div class="carousel">
@@ -314,7 +319,7 @@
             </div>
           </section>
           <section class="clubs-section">
-            <h4 id="clubs" class="main-heading">Join One of Our Children Clubs</h4>
+            <h3 id="clubs" class="main-heading">Join One of Our Children Clubs</h3>
             <div class="image-wrapper">
               <figure class="clubs">
                 <a href="explore.html#club-anchor"><img src="images\club_1.jpg"
