--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="navbar-menu">
           <ul class="mobile-menu-list">
             <label class="hamburger-label" for="hamburger-menu"><span class="fa fa-bars menu-icon"></span>
-              <span id="menu" class="menu-link ">Menu</span>
+              <span id="menu" class="menu-link">Menu</span>
             </label>
             <input type="checkbox" id="hamburger-menu" />
             <li><a href="exhibitions.html">Exhibitions</a></li>
@@ -73,59 +73,52 @@
           </ul>
           <div class="navbar-icon-wrapper">
 
-            <div class="dropdown-wrapper">
-              <i class="fa fa-ticket-alt navbar-icon"></i>
-              <div class="ticket-dropdown">
-                <p class="ticket-header">buy ticket</p>
-                <p class="dropdown-text">
-                  Please Choose the Desired Number of Tickets and Click Proceed in
+
+            <i class="fa fa-search navbar-icon"></i>
+            <div class="modal" id="search-modal">
+              <div class="modal-heading"><span>Search results</span><i class="fas fa-times close-icon"></i></div>
+              <div class="modal-body">
+                <form action="" class="dropdown-form">
+                  <div class="form-block">
+                    <label for="search">Search</label>
+                    <input type="text" name="first-name" placeholder="Start Writing..." id="search" class="box" />
+                  </div>
+                </form>
+                <p class="modal-text">
+                  Sorry, no result for your search, please try something else
+                </p>
+              </div>
+            </div>
+
+            <i class="fa fa-ticket-alt navbar-icon"></i>
+            <div class="modal" id="ticket-modal">
+              <div class="modal-heading"><span>Buy tickets</span><i class="fas fa-times close-icon"></i></div>
+              <div class="modal-body">
+                <p class="modal-text">
+                  Please choose the desired number of tickets and click proceed in
                   order to finalize your purchase on www.ticketmaster.com
                 </p>
-                <p class="dropdown-text">
+                <p class="modal-text">
                   If your party consist of 6 people or more, you will be taken to
                   our contact form.
                 </p>
                 <form action="" class="ticket dropdown-form">
-                  <label for="select" class="ticket-label">Tickets</label>
-                  <select name="tickets" id="select">
-                    <option class="option" value="1">1</option>
-                    <option class="option" value="1">2</option>
-                    <option class="option" value="1">3</option>
-                    <option class="option" value="1">4</option>
-                    <option class="option" value="1">5</option>
-                    <option class="option" value="more">6 or more</option>
-                  </select>
+                  <div class="form-block">
+                    <label for="select">Tickets</label>
+                    <select name="tickets" id="select">
+                      <option class="option" value="1">1</option>
+                      <option class="option" value="1">2</option>
+                      <option class="option" value="1">3</option>
+                      <option class="option" value="1">4</option>
+                      <option class="option" value="1">5</option>
+                      <option class="option" value="more">6 or more</option>
+                    </select>
+                  </div>
                 </form>
-                <button class="ticket">PROCEED</button>
+                <button class="button ticket">Proceed</button>
               </div>
             </div>
 
-            <div class="dropdown-wrapper">
-              <i class="fa fa-user-circle navbar-icon"></i>
-              <div class="profile-dropdown">
-                <p class="profile-header">your account</p>
-                <form class="dropdown-form" id="profile-form">
-                  <label for="email" class="label">E-mail</label>
-                  <input type="text" name="email" placeholder="your@email.com" id="dropdown-email" class="box" />
-                  <div class="error-message" id="profile-email-error">
-                    Please enter a valid e-mail address
-                  </div>
-
-                  <label for="choose" class="label_2">Password</label>
-                  <input type="password" name="choose" placeholder="Password" class="box password"
-                    id="dropdown-password" />
-                  <div class="error-message" id="profile-password-error">
-                    Must be at least 5 characters
-                  </div>
-                  <div id="success-message">
-                    Welcome back, you are now logged in
-                  </div>
-                  <button type="submit" id="profile-submit-button" class="profile">
-                    SIGN IN
-                  </button>
-                </form>
-              </div>
-            </div>
           </div>
         </div>
       </nav>
