--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
 </head>
 
 <body>
+  <div class="fading-background"></div>
   <div class="flex-wrapper">
     <header>
       <div class="header-wrapper">
         <figure class="logo">
           <a href="index.html"><img src="images/cms-logo.png" alt="Community Science Museum logo" /></a>
         </figure>
+        <div class="header-time-wrapper">
+          <span class="fa fa-clock" id="header-time-icon"></span>
+          <p id="header-time-text">Open today: 10:00 — 16:00</p>
+        </div>
         <!-- <div class="dropdown-wrapper">
             <i class="fa fa-search nav-icon"></i>
             <div class="search-dropdown">
@@ -73,8 +78,7 @@
           </ul>
           <div class="navbar-icon-wrapper">
 
-
-            <i class="fa fa-search navbar-icon"></i>
+            <!-- <i class="fa fa-search navbar-icon"></i>
             <div class="modal" id="search-modal">
               <div class="modal-heading"><span>Search results</span><i class="fas fa-times close-icon"></i></div>
               <div class="modal-body">
@@ -88,37 +92,38 @@
                   Sorry, no result for your search, please try something else
                 </p>
               </div>
-            </div>
-
-            <i class="fa fa-ticket-alt navbar-icon"></i>
-            <div class="modal" id="ticket-modal">
-              <div class="modal-heading"><span>Buy tickets</span><i class="fas fa-times close-icon"></i></div>
-              <div class="modal-body">
-                <p class="modal-text">
-                  Please choose the desired number of tickets and click proceed in
-                  order to finalize your purchase on www.ticketmaster.com
-                </p>
-                <p class="modal-text">
-                  If your party consist of 6 people or more, you will be taken to
-                  our contact form.
-                </p>
-                <form action="" class="ticket dropdown-form">
-                  <div class="form-block">
-                    <label for="select">Tickets</label>
-                    <select name="tickets" id="select">
-                      <option class="option" value="1">1</option>
-                      <option class="option" value="1">2</option>
-                      <option class="option" value="1">3</option>
-                      <option class="option" value="1">4</option>
-                      <option class="option" value="1">5</option>
-                      <option class="option" value="more">6 or more</option>
-                    </select>
-                  </div>
-                </form>
-                <button class="button ticket">Proceed</button>
+            </div> -->
+            <button class="navbar-ticket-button"><span>Buy tickets</span><span
+                class="fa fa-ticket-alt navbar-ticket-icon"></span></button>
+          </div>
+        </div>
+        <div class="modal" id="ticket-modal">
+          <div class="modal-header"><span class="modal-heading">Buy tickets</span><i
+              class="fas fa-times close-icon"></i>
+          </div>
+          <div class="modal-body">
+            <p class="modal-text">
+              Please choose the desired number of tickets and click proceed in
+              order to finalize your purchase on www.ticketmaster.com
+            </p>
+            <!-- <p class="modal-text">
+              If your party consist of 6 people or more, you will be taken to
+              our contact form.
+            </p> -->
+            <form action="" class="ticket dropdown-form">
+              <div class="form-block">
+                <label for="select" class="modal-label">Tickets</label>
+                <select name="tickets" id="select">
+                  <option class="option" value="1">1</option>
+                  <option class="option" value="1">2</option>
+                  <option class="option" value="1">3</option>
+                  <option class="option" value="1">4</option>
+                  <option class="option" value="1">5</option>
+                  <option class="option" value="more">6 or more</option>
+                </select>
               </div>
-            </div>
-
+            </form>
+            <button class="button modal-button">Proceed</button>
           </div>
         </div>
       </nav>
@@ -145,8 +150,8 @@
           </div>
         </a>
       </div>
-      <div class="fading-background_1"></div>
-      <div class="fading-background_2"></div>
+
+      <!-- <div class="fading-background_2"></div> -->
       <div class="categories-container">
         <section class="categories-section">
           <div class="category-box" id="cosmology">
