menu text removed

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="navbar-menu">
           <ul class="mobile-menu-list">
             <label class="hamburger-label" for="hamburger-menu"><span class="fa fa-bars menu-icon"></span>
-              <span id="menu" class="menu-link">Menu</span>
+              <!-- <span id="menu" class="menu-link">Menu</span> -->
             </label>
             <input type="checkbox" id="hamburger-menu" />
             <li><a href="exhibitions.html">Exhibitions</a></li>
@@ -131,13 +131,9 @@
     <main>
       <div class="hero-container">
         <div class="hero-content">
-          <!-- <hgroup> -->
           <h1>EXPLORE <em>more than 1000</em> EXHIBITIONS</h1>
-          <!-- <h2>entrance is <em>FREE FOR ALL</em></h2>
-          <h2><em>GUIDED TOUR</em> every hour:</h2> -->
-          <!-- </hgroup> -->
           <a href="https://www.ticketmaster.com/" class="button hero-button">
-            BUY TICKETS
+            Exhibitions
           </a>
         </div>
         <a href="about_us.html">
