header and navbar improved

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
               <p class="search-header">search results</p>
               <form action="" class="dropdown-form">
                 <label for="search" class="label">Search</label>
-                <input type="text" name="first-name" placeholder="Start Writing..." id="search" class="box" />
+                <input type="text" name="first-name" placeholder="Start Writing..." id="search"  />
               </form>
               <p class="dropdown-text">
                 Sorry, no result for your search, please try something else
